--- a/DeveloperApi/pom.xml
+++ b/DeveloperApi/pom.xml
@@ -4,6 +4,11 @@
 	<groupId>com.aayach</groupId>
 	<artifactId>DeveloperApi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<failOnMissingWebXml>false</failOnMissingWebXml>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -53,7 +58,6 @@
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
-
 				<configuration>
 					<url>http://localhost:7777/manager/html</url>
 					<server>TomcatServer</server>
@@ -68,7 +72,7 @@
 						</goals>
 						<phase>pre-integration-test</phase>
 						<configuration>
-							<port>7777</port>
+							<port>9999</port>
 						</configuration>
 					</execution>
 				</executions>
